tests/ui/non-int.stderr
error: expected integer literal
 --> tests/ui/non-int.rs:7:24
  |
7 |     #[lazy_re(offset = 'a')]
  |                        ^^^
